<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presenter.View.cadastro.Atividades.ActDadosPessoais">

    <ImageView
        android:id="@+id/setaVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/seta_volta" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TituloPadrao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/dadosPessoais"
        app:layout_constraintStart_toStartOf="@+id/setaVoltar"
        app:layout_constraintTop_toBottomOf="@+id/setaVoltar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Nome Completo"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/input_nome"
                style="@style/inputPadrao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_bold"
                android:hint="Digite seu nome completo"
                android:inputType="textPersonName" />

            <!-- Data de Nascimento -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:text="Data de Nascimento"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/input_data_nascimento"
                style="@style/inputPadrao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="DD/MM/AAAA"
                android:inputType="date" />

            <!-- CPF -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:text="CPF"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/input_cpf"
                style="@style/inputPadrao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Digite seu CPF"
                android:inputType="date" />

            <!-- Email -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:text="E-mail"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/input_email"
                style="@style/inputPadrao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Digite seu e-mail"
                android:inputType="textEmailAddress" />

            <!-- Confirmar Email -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:text="Confirmar E-mail"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/input_confirma_email"
                style="@style/inputPadrao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirme seu e-mail"
                android:inputType="textEmailAddress" />

            <!-- Número de Telefone -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="4dp"
                android:text="Número de Telefone"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/input_telefone"
                style="@style/inputPadrao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="(DDD) 00000-0000"
                android:inputType="phone" />

            <!-- Checkbox -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrainCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/checkboxPolitica"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/bordas_gray_50_radius_2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imgCheck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:src="@drawable/baseline_check_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    style="@style/textogray800"
                    android:layout_width="0dp"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/liEaceitoPoliticaDePrivacidade"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/checkboxPolitica"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <!-- Botão -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_salvar"
                style="@style/botaoAZul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingVertical="12dp"
                android:text="@string/continuar" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>